<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_bg"
    tools:context=".PopActivity">

    <LinearLayout
        android:layout_width="249dp"
        android:layout_height="200dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_info_24" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.175"
                android:gravity="fill|left"
                android:text="@string/labelZeiel1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.175"
                android:gravity="fill|left"
                android:text="@string/labelZeiel2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.175"
                android:gravity="fill|left"
                android:text="@string/labelZeiel4"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.175"
                android:gravity="fill|left"
                android:text="@string/labelZeiel5"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.175"
                android:gravity="fill|left"
                android:text="@string/labelZeiel3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonOkView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:gravity="center"
                android:text="@string/buttonOk"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>