<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradiant"
    tools:context=".ChangePathActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|start"
                android:paddingBottom="10dp"
                android:text="@string/labelEingabe"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:paddingStart="15dp"
                    android:text="@string/labelLesepfad"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextLesepfadView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textPersonName"
                    android:text="@string/plainTextPfad"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8">

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="bottom|start"
                android:text="@string/labelAusgabe"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:paddingStart="15dp"
                    android:text="@string/labelSpeicherpfad"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextSpeicherPfadView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/plainTextSpeicherpfad"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:paddingStart="15dp"
                    android:text="@string/labelGeraetename"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextGeraetenameView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/plainTextGeraetename"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/buttonSpeichernPfad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonSpeichern"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonEinstellungenZurzecksetzenView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonEinstellungenZuruecksetzen"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3">

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>